Removes the addition of the .exe extension to unit-test scripts, on win32.
On win32, test scripts are created with a .exe extension.
Under mingw, a .exe script is launched in 16 bit compatibility mode (through
ntvdm), and so it just does not run.

http://bugzilla.clutter-project.org/show_bug.cgi?id=2619
(cherry picked from commit 4594d1bafe835d1fa68e04564528a497d259d7dc)

Signed-off-by: Emmanuele Bassi <ebassi@linux.intel.com>

--- a/configure.ac
+++ b/configure.ac
@@ -91,6 +91,7 @@ AS_CASE([$host],
         [platform_win32=no]
 )
 AC_MSG_RESULT([$platform_win32])
+AM_CONDITIONAL(OS_WIN32, [test "$platform_win32" = "yes"])
 
 AC_SUBST(CLUTTER_LT_VERSION)
 AC_SUBST(CLUTTER_LT_LDFLAGS)
