--- a/configure.ac
+++ b/configure.ac
@@ -1124,11 +1124,13 @@ AS_CASE([$enable_maintainer_flags],
         [AC_MSG_ERROR([Invalid option for --enable-maintainer-flags])]
 )
 
+# strip leading spaces
+MAINTAINER_CFLAGS=${MAINTAINER_CFLAGS#*  }
 AC_SUBST(MAINTAINER_CFLAGS)
 
 dnl === Dependencies, compiler flags and linker libraries =====================
 # strip leading space
-BACKEND_PC_FILES=${BACKEND_PC_FILES/# }
+BACKEND_PC_FILES=${BACKEND_PC_FILES#* }
 
 CLUTTER_REQUIRES="$CLUTTER_BASE_PC_FILES $IMAGE_PC_FILES $BACKEND_PC_FILES"
 PKG_CHECK_MODULES(CLUTTER_DEPS, [$CLUTTER_REQUIRES])
