build: Look for sed
Use AC_PROG_SED to find sed in a portable way.

--- a/configure.ac
+++ b/configure.ac
@@ -79,6 +79,8 @@ CLUTTER_LT_AGE=lt_age
 CLUTTER_LT_VERSION="$CLUTTER_LT_CURRENT:$CLUTTER_LT_REV:$CLUTTER_LT_AGE"
 CLUTTER_LT_LDFLAGS="-version-info $CLUTTER_LT_VERSION"
 
+AC_PROG_SED
+
 AC_CANONICAL_HOST
 AC_MSG_CHECKING([if building for some Win32 platform])
 AS_CASE([$host],
