cogl: remove OSX/WIN32 specific bits in favour of a stub winsys
Until Cogl gains native win32/OSX support this remove the osx and win32
winsys files and instead we'll just rely on the stub-winsys.c to handle
these platforms. Since the only thing the platform specific files were
providing anyway was a get_proc_address function; it was trivial to
simply update the clutter backend code to handle this directly for now.

--- a/clutter/cogl/cogl/Makefile.am
+++ b/clutter/cogl/cogl/Makefile.am
@@ -342,14 +342,8 @@ if SUPPORT_EGL_PLATFORM_GDL
 cogl_sources_c += \
        $(srcdir)/winsys/cogl-winsys-egl.c
 endif
-if SUPPORT_WIN32
+if SUPPORT_STUB
 cogl_sources_c += \
-       $(srcdir)/winsys/cogl-winsys-win32.c \
-       $(srcdir)/winsys/cogl-winsys-stub.c
-endif
-if SUPPORT_OSX
-cogl_sources_c += \
-       $(srcdir)/winsys/cogl-winsys-osx.c \
        $(srcdir)/winsys/cogl-winsys-stub.c
 endif
 
