Autotools update in $(srcroot)
-Change ordering of SUBDIRS so that 'make dist'
 can be completed with the VS2008/2010 build files

-Add the README file for distribution with the correct
 required versions for the dependencies

-Added the pre-configured config.h(.win32.in) for
 distribution

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,7 +2,7 @@ include $(top_srcdir)/build/autotools/Makefile.am.silent
 
 NULL =
 
-SUBDIRS = build clutter tests doc po
+SUBDIRS = clutter tests doc po build
 
 # XXX - this is a massive hack to make autoreconf honour the ACLOCAL_FLAGS
 # that jhbuild sets while still retaining build/autotools as the authoritative
@@ -12,6 +12,9 @@ ACLOCAL_AMFLAGS = -I build/autotools ${ACLOCAL_FLAGS}
 EXTRA_DIST = \
 	ChangeLog.pre-git-import	\
 	README.in			\
+	README				\
+	config.h.win32		\
+	config.h.win32.in	\
 	$(NULL)
 
 CLEANFILES = $(pcfiles)
