--- a/configure.ac
+++ b/configure.ac
@@ -1238,6 +1238,9 @@ AC_CONFIG_FILES([
 	build/Makefile
 	build/autotools/Makefile
 	build/mingw/Makefile
+	build/win32/Makefile
+	build/win32/vs9/Makefile
+	build/win32/vs10/Makefile
 
 	clutter/Makefile
         clutter/clutter-config.h
