cogl/configure.ac: AC_SUBST an empty MAINTAINER_CFLAGS
For compatibility with the way we build Cogl as part of Clutter we now
substitute an empty MAINTAINER_CFLAGS variable. When building Cogl
standalone all our extra CFLAGS go through COGL_EXTRA_CFLAGS so the
separate MAINTAINER_CFLAGS aren't used, but automake will get confused
if a substitution isn't made.

--- a/clutter/cogl/configure.ac
+++ b/clutter/cogl/configure.ac
@@ -704,6 +704,10 @@ AC_SUBST(COGL_DEP_LIBS)
 AC_SUBST(COGL_EXTRA_CFLAGS)
 AC_SUBST(COGL_EXTRA_LDFLAGS)
 
+# just for compatability with the clutter build...
+MAINTAINER_CFLAGS=
+AC_SUBST(MAINTAINER_CFLAGS)
+
 AC_OUTPUT(
 Makefile
 cogl/Makefile
