Update configure.ac for some missed headers
The config.h.win32 and clutter-version.h.win32 needs to be
created during the ./autogen.sh stage, and they were missed.

Made up for them here.

--- a/configure.ac
+++ b/configure.ac
@@ -1232,7 +1232,7 @@ dnl ===========================================================================
 
 AC_CONFIG_FILES([
 	Makefile
-
+	config.h.win32
         README
 
 	build/Makefile
@@ -1245,6 +1245,7 @@ AC_CONFIG_FILES([
 	clutter/Makefile
         clutter/clutter-config.h
 	clutter/clutter-version.h
+	clutter/clutter-version.h.win32
 	clutter/clutter-$CLUTTER_API_VERSION.pc:clutter/clutter.pc.in
 
 	clutter/cally/cally-$CLUTTER_API_VERSION.pc:clutter/cally/cally.pc.in
